NCalc2/Grammar/NCalc2Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\phmarques\Documents\GitHub\NCalc2\NCalc2\NCalc2.g4 by ANTLR 4.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace NCalc2.Grammar {

using System;
using System.Text;
using System.Globalization;
using System.Collections.Generic;
using NCalc2.Expressions;

using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.3")]
[System.CLSCompliant(false)]
public partial class NCalc2Parser : Parser {
	public const int
		T__29=1, T__28=2, T__27=3, T__26=4, T__25=5, T__24=6, T__23=7, T__22=8, 
		T__21=9, T__20=10, T__19=11, T__18=12, T__17=13, T__16=14, T__15=15, T__14=16, 
		T__13=17, T__12=18, T__11=19, T__10=20, T__9=21, T__8=22, T__7=23, T__6=24, 
		T__5=25, T__4=26, T__3=27, T__2=28, T__1=29, T__0=30, TRUE=31, FALSE=32, 
		NAME=33, INTEGER=34, DATETIME=35, VAR=36, E=37, FLOAT=38, STRING=39, WS=40;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'/'", "'!='", "'||'", "'>>'", "'<<'", "'&&'", "'='", "'^'", 
		"'?'", "'<='", "'&'", "'('", "'*'", "','", "':'", "'>='", "'<'", "'=='", 
		"'|'", "'~'", "'>'", "'or'", "'!'", "'<>'", "'%'", "')'", "'and'", "'+'", 
		"'not'", "'-'", "'true'", "'false'", "NAME", "INTEGER", "DATETIME", "VAR", 
		"E", "FLOAT", "STRING", "WS"
	};
	public const int
		RULE_ncalc = 0, RULE_expr = 1, RULE_orExpr = 2, RULE_andExpr = 3, RULE_bitOrExpr = 4, 
		RULE_bitXorExpr = 5, RULE_bitAndExpr = 6, RULE_eqExpr = 7, RULE_relExpr = 8, 
		RULE_shiftExpr = 9, RULE_addExpr = 10, RULE_multExpr = 11, RULE_unaryExpr = 12, 
		RULE_primaryExpr = 13, RULE_value = 14, RULE_id = 15;
	public static readonly string[] ruleNames = {
		"ncalc", "expr", "orExpr", "andExpr", "bitOrExpr", "bitXorExpr", "bitAndExpr", 
		"eqExpr", "relExpr", "shiftExpr", "addExpr", "multExpr", "unaryExpr", 
		"primaryExpr", "value", "id"
	};

	public override string GrammarFileName { get { return "NCalc2.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }


	private const char BS = '\\';
	private static NumberFormatInfo numberFormatInfo = new NumberFormatInfo();

	private string extractString(string text) {
	    
	    StringBuilder sb = new StringBuilder(text);
	    int startIndex = 1; // Skip initial quote
	    int slashIndex = -1;

	    while ((slashIndex = sb.ToString().IndexOf(BS, startIndex)) != -1)
	    {
	        char escapeType = sb[slashIndex + 1];
	        switch (escapeType)
	        {
	            case 'u':
	              string hcode = String.Concat(sb[slashIndex+4], sb[slashIndex+5]);
	              string lcode = String.Concat(sb[slashIndex+2], sb[slashIndex+3]);
	              char unicodeChar = Encoding.Unicode.GetChars(new byte[] { System.Convert.ToByte(hcode, 16), System.Convert.ToByte(lcode, 16)} )[0];
	              sb.Remove(slashIndex, 6).Insert(slashIndex, unicodeChar); 
	              break;
	            case 'n': sb.Remove(slashIndex, 2).Insert(slashIndex, '\n'); break;
	            case 'r': sb.Remove(slashIndex, 2).Insert(slashIndex, '\r'); break;
	            case 't': sb.Remove(slashIndex, 2).Insert(slashIndex, '\t'); break;
	            case '\'': sb.Remove(slashIndex, 2).Insert(slashIndex, '\''); break;
	            case '\\': sb.Remove(slashIndex, 2).Insert(slashIndex, '\\'); break;
	            default: throw new Exception("Unvalid escape sequence: \\" + escapeType);
	        }

	        startIndex = slashIndex + 1;

	    }

	    sb.Remove(0, 1);
	    sb.Remove(sb.Length - 1, 1);

	    return sb.ToString();
	}

	public NCalc2Parser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class NcalcContext : ParserRuleContext {
		public LogicalExpression retValue;
		public ExprContext _expr;
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(NCalc2Parser.Eof, 0); }
		public NcalcContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ncalc; } }
	}

	[RuleVersion(0)]
	public NcalcContext ncalc() {
		NcalcContext _localctx = new NcalcContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_ncalc);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 32; _localctx._expr = expr();
			State = 33; Match(Eof);
			 _localctx.retValue =  _localctx._expr.retValue;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public LogicalExpression retValue;
		public OrExprContext first;
		public ExprContext middle;
		public ExprContext right;
		public OrExprContext _orExpr;
		public OrExprContext orExpr() {
			return GetRuleContext<OrExprContext>(0);
		}
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		ExprContext _localctx = new ExprContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_expr);
		try {
			State = 46;
			switch ( Interpreter.AdaptivePredict(_input,0,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 36; _localctx.first = orExpr(0);
				State = 37; Match(T__21);
				State = 38; _localctx.middle = expr();
				State = 39; Match(T__15);
				State = 40; _localctx.right = expr();
				 _localctx.retValue =  new TernaryExpression(_localctx.first.retValue, _localctx.middle.retValue, _localctx.right.retValue);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 43; _localctx._orExpr = orExpr(0);
				 _localctx.retValue =  _localctx._orExpr.retValue;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OrExprContext : ParserRuleContext {
		public LogicalExpression retValue;
		public OrExprContext first;
		public AndExprContext _andExpr;
		public OrExprContext orExpr() {
			return GetRuleContext<OrExprContext>(0);
		}
		public AndExprContext andExpr() {
			return GetRuleContext<AndExprContext>(0);
		}
		public OrExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_orExpr; } }
	}

	[RuleVersion(0)]
	public OrExprContext orExpr() {
		return orExpr(0);
	}

	private OrExprContext orExpr(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		OrExprContext _localctx = new OrExprContext(_ctx, _parentState);
		OrExprContext _prevctx = _localctx;
		int _startState = 4;
		EnterRecursionRule(_localctx, 4, RULE_orExpr, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 49; _localctx._andExpr = andExpr(0);
			 _localctx.retValue =  _localctx._andExpr.retValue;
			}
			_ctx.stop = _input.Lt(-1);
			State = 59;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new OrExprContext(_parentctx, _parentState);
					_localctx.first = _prevctx;
					PushNewRecursionContext(_localctx, _startState, RULE_orExpr);
					State = 52;
					if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
					State = 53;
					_la = _input.La(1);
					if ( !(_la==T__27 || _la==T__8) ) {
					_errHandler.RecoverInline(this);
					}
					Consume();
					State = 54; _localctx._andExpr = andExpr(0);
					 _localctx.retValue =  new BinaryExpression(BinaryExpressionType.Or, _localctx.first.retValue, _localctx._andExpr.retValue);
					}
					} 
				}
				State = 61;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class AndExprContext : ParserRuleContext {
		public LogicalExpression retValue;
		public AndExprContext first;
		public BitOrExprContext _bitOrExpr;
		public AndExprContext andExpr() {
			return GetRuleContext<AndExprContext>(0);
		}
		public BitOrExprContext bitOrExpr() {
			return GetRuleContext<BitOrExprContext>(0);
		}
		public AndExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_andExpr; } }
	}

	[RuleVersion(0)]
	public AndExprContext andExpr() {
		return andExpr(0);
	}

	private AndExprContext andExpr(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		AndExprContext _localctx = new AndExprContext(_ctx, _parentState);
		AndExprContext _prevctx = _localctx;
		int _startState = 6;
		EnterRecursionRule(_localctx, 6, RULE_andExpr, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 63; _localctx._bitOrExpr = bitOrExpr(0);
			 _localctx.retValue =  _localctx._bitOrExpr.retValue;
			}
			_ctx.stop = _input.Lt(-1);
			State = 73;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new AndExprContext(_parentctx, _parentState);
					_localctx.first = _prevctx;
					PushNewRecursionContext(_localctx, _startState, RULE_andExpr);
					State = 66;
					if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
					State = 67;
					_la = _input.La(1);
					if ( !(_la==T__24 || _la==T__3) ) {
					_errHandler.RecoverInline(this);
					}
					Consume();
					State = 68; _localctx._bitOrExpr = bitOrExpr(0);
					 _localctx.retValue =  new BinaryExpression(BinaryExpressionType.And, _localctx.first.retValue, _localctx._bitOrExpr.retValue);
					}
					} 
				}
				State = 75;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class BitOrExprContext : ParserRuleContext {
		public LogicalExpression retValue;
		public BitOrExprContext first;
		public BitXorExprContext _bitXorExpr;
		public BitOrExprContext bitOrExpr() {
			return GetRuleContext<BitOrExprContext>(0);
		}
		public BitXorExprContext bitXorExpr() {
			return GetRuleContext<BitXorExprContext>(0);
		}
		public BitOrExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bitOrExpr; } }
	}

	[RuleVersion(0)]
	public BitOrExprContext bitOrExpr() {
		return bitOrExpr(0);
	}

	private BitOrExprContext bitOrExpr(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		BitOrExprContext _localctx = new BitOrExprContext(_ctx, _parentState);
		BitOrExprContext _prevctx = _localctx;
		int _startState = 8;
		EnterRecursionRule(_localctx, 8, RULE_bitOrExpr, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 77; _localctx._bitXorExpr = bitXorExpr(0);
			 _localctx.retValue =  _localctx._bitXorExpr.retValue;
			}
			_ctx.stop = _input.Lt(-1);
			State = 87;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new BitOrExprContext(_parentctx, _parentState);
					_localctx.first = _prevctx;
					PushNewRecursionContext(_localctx, _startState, RULE_bitOrExpr);
					State = 80;
					if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
					State = 81; Match(T__11);
					State = 82; _localctx._bitXorExpr = bitXorExpr(0);
					 _localctx.retValue =  new BinaryExpression(BinaryExpressionType.BitwiseOr, _localctx.first.retValue, _localctx._bitXorExpr.retValue);
					}
					} 
				}
				State = 89;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class BitXorExprContext : ParserRuleContext {
		public LogicalExpression retValue;
		public BitXorExprContext first;
		public BitAndExprContext _bitAndExpr;
		public BitAndExprContext bitAndExpr() {
			return GetRuleContext<BitAndExprContext>(0);
		}
		public BitXorExprContext bitXorExpr() {
			return GetRuleContext<BitXorExprContext>(0);
		}
		public BitXorExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bitXorExpr; } }
	}

	[RuleVersion(0)]
	public BitXorExprContext bitXorExpr() {
		return bitXorExpr(0);
	}

	private BitXorExprContext bitXorExpr(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		BitXorExprContext _localctx = new BitXorExprContext(_ctx, _parentState);
		BitXorExprContext _prevctx = _localctx;
		int _startState = 10;
		EnterRecursionRule(_localctx, 10, RULE_bitXorExpr, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 91; _localctx._bitAndExpr = bitAndExpr(0);
			 _localctx.retValue =  _localctx._bitAndExpr.retValue;
			}
			_ctx.stop = _input.Lt(-1);
			State = 101;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new BitXorExprContext(_parentctx, _parentState);
					_localctx.first = _prevctx;
					PushNewRecursionContext(_localctx, _startState, RULE_bitXorExpr);
					State = 94;
					if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
					State = 95; Match(T__22);
					State = 96; _localctx._bitAndExpr = bitAndExpr(0);
					 _localctx.retValue =  new BinaryExpression(BinaryExpressionType.BitwiseXOr, _localctx.first.retValue, _localctx._bitAndExpr.retValue);
					}
					} 
				}
				State = 103;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class BitAndExprContext : ParserRuleContext {
		public LogicalExpression retValue;
		public BitAndExprContext first;
		public EqExprContext _eqExpr;
		public BitAndExprContext bitAndExpr() {
			return GetRuleContext<BitAndExprContext>(0);
		}
		public EqExprContext eqExpr() {
			return GetRuleContext<EqExprContext>(0);
		}
		public BitAndExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bitAndExpr; } }
	}

	[RuleVersion(0)]
	public BitAndExprContext bitAndExpr() {
		return bitAndExpr(0);
	}

	private BitAndExprContext bitAndExpr(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		BitAndExprContext _localctx = new BitAndExprContext(_ctx, _parentState);
		BitAndExprContext _prevctx = _localctx;
		int _startState = 12;
		EnterRecursionRule(_localctx, 12, RULE_bitAndExpr, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 105; _localctx._eqExpr = eqExpr(0);
			 _localctx.retValue =  _localctx._eqExpr.retValue;
			}
			_ctx.stop = _input.Lt(-1);
			State = 115;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new BitAndExprContext(_parentctx, _parentState);
					_localctx.first = _prevctx;
					PushNewRecursionContext(_localctx, _startState, RULE_bitAndExpr);
					State = 108;
					if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
					State = 109; Match(T__19);
					State = 110; _localctx._eqExpr = eqExpr(0);
					 _localctx.retValue =  new BinaryExpression(BinaryExpressionType.BitwiseAnd, _localctx.first.retValue, _localctx._eqExpr.retValue);
					}
					} 
				}
				State = 117;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class EqExprContext : ParserRuleContext {
		public LogicalExpression retValue;
		public EqExprContext first;
		public RelExprContext _relExpr;
		public RelExprContext relExpr() {
			return GetRuleContext<RelExprContext>(0);
		}
		public EqExprContext eqExpr() {
			return GetRuleContext<EqExprContext>(0);
		}
		public EqExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_eqExpr; } }
	}

	[RuleVersion(0)]
	public EqExprContext eqExpr() {
		return eqExpr(0);
	}

	private EqExprContext eqExpr(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		EqExprContext _localctx = new EqExprContext(_ctx, _parentState);
		EqExprContext _prevctx = _localctx;
		int _startState = 14;
		EnterRecursionRule(_localctx, 14, RULE_eqExpr, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 119; _localctx._relExpr = relExpr(0);
			 _localctx.retValue =  _localctx._relExpr.retValue;
			}
			_ctx.stop = _input.Lt(-1);
			State = 134;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 132;
					switch ( Interpreter.AdaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						_localctx = new EqExprContext(_parentctx, _parentState);
						_localctx.first = _prevctx;
						PushNewRecursionContext(_localctx, _startState, RULE_eqExpr);
						State = 122;
						if (!(Precpred(_ctx, 3))) throw new FailedPredicateException(this, "Precpred(_ctx, 3)");
						State = 123;
						_la = _input.La(1);
						if ( !(_la==T__23 || _la==T__12) ) {
						_errHandler.RecoverInline(this);
						}
						Consume();
						State = 124; _localctx._relExpr = relExpr(0);
						 _localctx.retValue =  new BinaryExpression(BinaryExpressionType.Equal, _localctx.first.retValue, _localctx._relExpr.retValue);
						}
						break;

					case 2:
						{
						_localctx = new EqExprContext(_parentctx, _parentState);
						_localctx.first = _prevctx;
						PushNewRecursionContext(_localctx, _startState, RULE_eqExpr);
						State = 127;
						if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
						State = 128;
						_la = _input.La(1);
						if ( !(_la==T__28 || _la==T__6) ) {
						_errHandler.RecoverInline(this);
						}
						Consume();
						State = 129; _localctx._relExpr = relExpr(0);
						 _localctx.retValue =  new BinaryExpression(BinaryExpressionType.NotEqual, _localctx.first.retValue, _localctx._relExpr.retValue);
						}
						break;
					}
					} 
				}
				State = 136;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
